--- a/src/styles/Body.module.css
+++ b/src/styles/Body.module.css
@@ -4,3 +4,11 @@
   padding-top: 40px;
   padding-bottom: 120px;
 }
+
+.root > * {
+  margin-top: 120px;
+}
+
+.root > *:first-child {
+  margin-top: 0px;
+}
