--- a/src/styles/ProductDetail.module.css
+++ b/src/styles/ProductDetail.module.css
@@ -30,11 +30,13 @@
 }
 
 .price {
+  margin-top: 24px;
   color: black;
 }
 
 .btns-container {
   display: flex;
+  margin-top: 32px;
 }
 
 .btns-container > *:first-child {
@@ -48,4 +50,125 @@
   align-items: center;
   justify-content: center;
   opacity: 0.25;
+}
+
+.features {
+  margin-top: 88px;
+}
+
+.features > * {
+  margin-top: 24px;
+}
+
+.features > *:first-child {
+  margin-top: 0px;
+}
+
+.feature-title {
+  composes: product-detail-section-title from "./index.css";
+  color: black;
+}
+
+.features-body {
+  composes: text-body from "./index.css";
+  color: black;
+  opacity: 0.5;
+  white-space: pre-wrap;
+}
+
+.content {
+  margin-top: 113px;
+}
+
+.content-title {
+  composes: product-detail-section-title from "./index.css";
+  color: black;
+  margin-bottom: 24px;
+}
+
+.content-list > * {
+  margin-top: 8px;
+}
+
+.content-list > *:first-child {
+  margin-top: 0px;
+}
+
+.content-item-quantity {
+  composes: text-body from "./index.css";
+  font-weight: 700 !important;
+  margin-right: 24px;
+  color: var(--dark-orange);
+}
+
+.content-item-name {
+  composes: text-body from "./index.css";
+  color: black;
+  opacity: 0.5;
+}
+
+.gallery {
+  margin-top: 88px;
+}
+
+.gallery > * {
+  margin-top: 20px;
+}
+
+.gallery > *:first-child {
+  margin-top: 0px;
+}
+
+.gallery-first {
+  width: 100%;
+  height: 174px;
+  object-fit: cover;
+}
+
+.gallery-second {
+  width: 100%;
+  height: 174px;
+  object-fit: cover;
+}
+
+.gallery-third {
+  width: 100%;
+  height: 368px;
+  object-fit: cover;
+}
+
+.others {
+  margin-top: 120px;
+}
+
+.others-title {
+  composes: product-detail-section-title from "./index.css";
+  text-align: center;
+  color: black;
+  margin-bottom: 40px;
+}
+
+.others-item {
+  margin-top: 56px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.others-item:first-child {
+  margin-top: 0px;
+}
+
+.others-item > * {
+  margin-top: 32px;
+}
+
+.others-item > *:first-child {
+  margin-top: 0px;
+}
+
+.others-item-img {
+  width: 100%;
+  height: 120px;
+  object-fit: cover;
 }
