--- a/src/styles/Counter.module.css
+++ b/src/styles/Counter.module.css
@@ -2,7 +2,7 @@
   composes: btn-text from "./index.css";
   width: 120px;
   height: 48px;
-  background-color: var(--dark-gray);
+  background-color: var(--light-gray);
   display: flex;
   justify-content: space-around;
   align-items: center;
