--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -3,13 +3,14 @@
   justify-content: space-between;
   align-items: center;
   background-color: var(--dark-blue);
-  padding: 32px 24px;
+  padding: 0px 24px;
   border-bottom: 1px solid rgba(172, 167, 167, 0.3);
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   z-index: 1;
+  height: 90px;
 }
 
 .hamburger {
