--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,27 +2,18 @@
   --dark-orange: #d87d4a;
   --light-orange: #fbaf85;
   --dark-blue: #101010;
-  --dark-gray: #f1f1f1;
-  --light-gray: #fafafa;
+  --light-gray: #f1f1f1;
+  --dark-gray: #cfcfcf;
   --font-manrope: "Manrope", sans-serif;
   --tablet-min-width: 481px;
   --laptop-min-width: 1224px;
 }
 
-* {
+body {
   font-family: var(--font-manrope);
-}
-
-input,
-textarea,
-button,
-select,
-a {
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 h1 {
-  font-family: var(--font-manrope);
   font-weight: 700;
   font-size: 56px;
   line-height: 58px;
@@ -31,7 +22,6 @@ h1 {
 }
 
 h2 {
-  font-family: var(--font-manrope);
   font-weight: 700;
   font-size: 40px;
   line-height: 44px;
@@ -40,7 +30,6 @@ h2 {
 }
 
 h3 {
-  font-family: var(--font-manrope);
   font-weight: 700;
   font-size: 32px;
   line-height: 36px;
@@ -49,7 +38,6 @@ h3 {
 }
 
 h4 {
-  font-family: var(--font-manrope);
   font-weight: 700;
   font-size: 28px;
   line-height: 38px;
@@ -58,7 +46,6 @@ h4 {
 }
 
 h5 {
-  font-family: var(--font-manrope);
   font-weight: 700;
   font-size: 24px;
   line-height: 33px;
@@ -67,7 +54,6 @@ h5 {
 }
 
 h6 {
-  font-family: var(--font-manrope);
   font-weight: 700;
   font-size: 18px;
   line-height: 25px;
@@ -76,7 +62,6 @@ h6 {
 }
 
 .mobile-title {
-  font-family: var(--font-manrope);
   font-weight: 700;
   font-size: 36px;
   line-height: 40px;
@@ -85,7 +70,6 @@ h6 {
 }
 
 .overline {
-  font-family: var(--font-manrope);
   font-weight: 400;
   font-size: 14px;
   line-height: 19px;
@@ -94,7 +78,6 @@ h6 {
 }
 
 .sub-title {
-  font-family: var(--font-manrope);
   font-weight: 700;
   font-size: 13px;
   line-height: 25px;
@@ -103,7 +86,6 @@ h6 {
 }
 
 .product-detail-section-title {
-  font-family: var(--font-manrope);
   font-weight: 700;
   font-size: 24px;
   line-height: 36px;
@@ -111,7 +93,6 @@ h6 {
 }
 
 .text-body {
-  font-family: var(--font-manrope);
   font-weight: 200;
   font-size: 15px;
   line-height: 25px;
