--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -59,6 +59,21 @@ select {
   font: inherit;
 }
 
+/* remove focus ring */
+textarea:focus,
+input:focus {
+  outline: none;
+}
+
+/* remove mobile tap color */
+input,
+textarea,
+button,
+select,
+a {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
 /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
 @media (prefers-reduced-motion: reduce) {
   html:focus-within {
