--- a/src/styles/Ad.module.css
+++ b/src/styles/Ad.module.css
@@ -1,14 +1,14 @@
 .best-gear {
   width: 100%;
-  height: 300px;
+  height: 30rem;
   object-fit: cover;
 }
 
 .title {
   color: black;
   text-transform: uppercase;
-  margin-top: 40px;
-  margin-bottom: 32px;
+  margin-top: 4rem;
+  margin-bottom: 3.2rem;
   text-align: center;
 }
 
@@ -17,6 +17,7 @@
 }
 
 .body {
+  composes: text-body from "./index.css";
   color: black;
   opacity: 0.5;
   text-align: center;
