--- a/src/styles/Cart.module.css
+++ b/src/styles/Cart.module.css
@@ -1,25 +1,12 @@
-.bg {
-  position: absolute;
-  left: 0;
-  top: 0;
-  height: 100vh;
-  width: 100vw;
-  background-color: rgba(0, 0, 0, 0.4);
-  padding-right: 24px;
-  padding-left: 24px;
-  padding-top: 114px;
-  z-index: 1;
-}
-
 .cart {
-  padding: 32px 28px;
+  padding: 3.2rem 2.8rem;
   background-color: white;
 }
 
 .title {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 32px;
+  margin-bottom: 3.2rem;
 }
 
 .remove-btn {
@@ -29,11 +16,11 @@
 }
 
 .body > * {
-  margin-top: 24px;
+  margin-top: 2.4rem;
 }
 
 .body > *:first-child {
-  margin-top: 0px;
+  margin-top: 0rem;
 }
 
 .cart-item {
@@ -42,10 +29,10 @@
 }
 
 .item-img {
-  width: 64px;
-  height: 64px;
+  width: 6.4rem;
+  height: 6.4rem;
   object-fit: cover;
-  border-radius: 8px;
+  border-radius: 0.8rem;
 }
 
 .item-center-column {
@@ -53,13 +40,13 @@
   flex-direction: column;
   justify-content: space-around;
   flex-grow: 1;
-  padding-left: 16px;
+  padding-left: 1.6rem;
 }
 
 .item-name {
   composes: text-body from "./index.css";
   font-weight: 700 !important;
-  letter-spacing: -1px !important;
+  letter-spacing: -0.1rem !important;
   color: black;
 }
 
@@ -72,7 +59,7 @@
 .total {
   display: flex;
   justify-content: space-between;
-  margin-top: 32px;
+  margin-top: 3.2rem;
 }
 
 .total-tag {
