--- a/src/styles/CategoryProduct.module.css
+++ b/src/styles/CategoryProduct.module.css
@@ -1,19 +1,19 @@
 .description-card {
-  padding-top: 32px;
-  padding-bottom: 0px;
+  padding-top: 3.2rem;
+  padding-bottom: 0rem;
 }
 
 .description-card > * {
-  margin-top: 24px;
+  margin-top: 2.4rem;
 }
 
 .description-card > *:first-child {
-  margin-top: 0px;
+  margin-top: 0rem;
 }
 
 .img {
   width: 100%;
-  height: 352px;
+  height: 35.2rem;
   object-fit: cover;
 }
 
