--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -1,32 +1,32 @@
 .root {
   width: 100%;
   background-color: var(--dark-blue);
-  padding-top: 52px;
-  padding-bottom: 38px;
-  padding-left: 24px;
-  padding-right: 24px;
+  padding-top: 5.2rem;
+  padding-bottom: 3.8rem;
+  padding-left: 2.4rem;
+  padding-right: 2.4rem;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .root > * {
-  margin-top: 48px;
+  margin-top: 4.8rem;
 }
 
 .root > *:first-child {
-  margin-top: 0px;
+  margin-top: 0rem;
 }
 
 .tabs {
 }
 
 .tabs > * {
-  margin-top: 16px;
+  margin-top: 1.6rem;
 }
 
 .tabs > *:first-child {
-  margin-top: 0px;
+  margin-top: 0rem;
 }
 
 .tab {
@@ -43,6 +43,6 @@
 
 .social-media {
   display: flex;
-  width: 104px;
+  width: 10.4rem;
   justify-content: space-between;
 }
