--- a/src/styles/ProductDetail.module.css
+++ b/src/styles/ProductDetail.module.css
@@ -1,45 +1,38 @@
 .root {
-  padding-left: 24px;
-  padding-right: 24px;
-}
-
-.back {
-  composes: text-body from "./index.css";
-  color: black;
-  opacity: 0.5;
-  margin-top: 16px;
+  padding-left: 2.4rem;
+  padding-right: 2.4rem;
 }
 
 .main-img {
   width: 100%;
-  height: 327px;
+  height: 32.7rem;
   object-fit: cover;
-  margin-top: 24px;
+  margin-top: 2.4rem;
 }
 
 .title {
   color: black;
-  margin-top: 40px;
+  margin-top: 4rem;
 }
 
 .description {
   color: black;
   opacity: 0.5;
-  margin-top: 24px;
+  margin-top: 2.4rem;
 }
 
 .price {
-  margin-top: 24px;
+  margin-top: 2.4rem;
   color: black;
 }
 
 .btns-container {
   display: flex;
-  margin-top: 32px;
+  margin-top: 3.2rem;
 }
 
 .btns-container > *:first-child {
-  margin-right: 16px;
+  margin-right: 1.6rem;
 }
 
 .btns-container span {
@@ -52,15 +45,15 @@
 }
 
 .features {
-  margin-top: 88px;
+  margin-top: 8.8rem;
 }
 
 .features > * {
-  margin-top: 24px;
+  margin-top: 2.4rem;
 }
 
 .features > *:first-child {
-  margin-top: 0px;
+  margin-top: 0rem;
 }
 
 .feature-title {
@@ -76,27 +69,27 @@
 }
 
 .content {
-  margin-top: 113px;
+  margin-top: 11.3rem;
 }
 
 .content-title {
   composes: product-detail-section-title from "./index.css";
   color: black;
-  margin-bottom: 24px;
+  margin-bottom: 2.4rem;
 }
 
 .content-list > * {
-  margin-top: 8px;
+  margin-top: 0.8rem;
 }
 
 .content-list > *:first-child {
-  margin-top: 0px;
+  margin-top: 0rem;
 }
 
 .content-item-quantity {
   composes: text-body from "./index.css";
   font-weight: 700 !important;
-  margin-right: 24px;
+  margin-right: 2.4rem;
   color: var(--dark-orange);
 }
 
@@ -107,67 +100,67 @@
 }
 
 .gallery {
-  margin-top: 88px;
+  margin-top: 8.8rem;
 }
 
 .gallery > * {
-  margin-top: 20px;
+  margin-top: 2rem;
 }
 
 .gallery > *:first-child {
-  margin-top: 0px;
+  margin-top: 0rem;
 }
 
 .gallery-first {
   width: 100%;
-  height: 174px;
+  height: 17.4rem;
   object-fit: cover;
 }
 
 .gallery-second {
   width: 100%;
-  height: 174px;
+  height: 17.4rem;
   object-fit: cover;
 }
 
 .gallery-third {
   width: 100%;
-  height: 368px;
+  height: 36.8rem;
   object-fit: cover;
 }
 
 .others {
-  margin-top: 120px;
+  margin-top: 12rem;
 }
 
 .others-title {
   composes: product-detail-section-title from "./index.css";
   text-align: center;
   color: black;
-  margin-bottom: 40px;
+  margin-bottom: 4rem;
 }
 
 .others-item {
-  margin-top: 56px;
+  margin-top: 5.6rem;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .others-item:first-child {
-  margin-top: 0px;
+  margin-top: 0rem;
 }
 
 .others-item > * {
-  margin-top: 32px;
+  margin-top: 3.2rem;
 }
 
 .others-item > *:first-child {
-  margin-top: 0px;
+  margin-top: 0rem;
 }
 
 .others-item-img {
   width: 100%;
-  height: 120px;
+  height: 12rem;
   object-fit: cover;
 }
