--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,105 +5,115 @@
   --light-gray: #f1f1f1;
   --dark-gray: #cfcfcf;
   --font-manrope: "Manrope", sans-serif;
-  --tablet-min-width: 481px;
-  --laptop-min-width: 1224px;
+  --tablet-min-width: 48.1rem;
+  --laptop-min-width: 122.4rem;
+}
+
+html {
+  font-size: 62.5%;
 }
 
 body {
   font-family: var(--font-manrope);
 }
 
+#modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
 h1 {
   font-weight: 700;
-  font-size: 56px;
-  line-height: 58px;
-  letter-spacing: 2px;
+  font-size: 5.6rem;
+  line-height: 5.8rem;
+  letter-spacing: 0.2rem;
   text-transform: uppercase;
 }
 
 h2 {
   font-weight: 700;
-  font-size: 40px;
-  line-height: 44px;
-  letter-spacing: 1.43px;
+  font-size: 4rem;
+  line-height: 4.4rem;
+  letter-spacing: 0.143rem;
   text-transform: uppercase;
 }
 
 h3 {
   font-weight: 700;
-  font-size: 32px;
-  line-height: 36px;
-  letter-spacing: 1.14px;
+  font-size: 3.2rem;
+  line-height: 3.6rem;
+  letter-spacing: 0.114rem;
   text-transform: uppercase;
 }
 
 h4 {
   font-weight: 700;
-  font-size: 28px;
-  line-height: 38px;
-  letter-spacing: 2px;
+  font-size: 2.8rem;
+  line-height: 3.8rem;
+  letter-spacing: 0.2rem;
   text-transform: uppercase;
 }
 
 h5 {
   font-weight: 700;
-  font-size: 24px;
-  line-height: 33px;
-  letter-spacing: 1.7px;
+  font-size: 2.4rem;
+  line-height: 3.3rem;
+  letter-spacing: 0.17rem;
   text-transform: uppercase;
 }
 
 h6 {
   font-weight: 700;
-  font-size: 18px;
-  line-height: 25px;
-  letter-spacing: 1.3px;
+  font-size: 1.8rem;
+  line-height: 2.5rem;
+  letter-spacing: 0.13rem;
   text-transform: uppercase;
 }
 
 .mobile-title {
   font-weight: 700;
-  font-size: 36px;
-  line-height: 40px;
-  letter-spacing: 1.3px;
+  font-size: 3.6rem;
+  line-height: 4rem;
+  letter-spacing: 0.13rem;
   text-transform: uppercase;
 }
 
 .overline {
   font-weight: 400;
-  font-size: 14px;
-  line-height: 19px;
-  letter-spacing: 10px;
+  font-size: 1.4rem;
+  line-height: 1.9rem;
+  letter-spacing: 1rem;
   text-transform: uppercase;
 }
 
 .sub-title {
   font-weight: 700;
-  font-size: 13px;
-  line-height: 25px;
-  letter-spacing: 0.93px;
+  font-size: 1.3rem;
+  line-height: 2.5rem;
+  letter-spacing: 0.093rem;
   text-transform: uppercase;
 }
 
 .product-detail-section-title {
   font-weight: 700;
-  font-size: 24px;
-  line-height: 36px;
-  letter-spacing: 0.86px;
+  font-size: 2.4rem;
+  line-height: 3.6rem;
+  letter-spacing: 0.086rem;
 }
 
 .text-body {
   font-weight: 200;
-  font-size: 15px;
-  line-height: 25px;
-  letter-spacing: 0.93px;
+  font-size: 1.5rem;
+  line-height: 2.5rem;
+  letter-spacing: 0.093rem;
 }
 
 .btn-text {
   font-weight: 700;
-  font-size: 13px;
-  line-height: 18px;
-  letter-spacing: 1px;
+  font-size: 1.3rem;
+  line-height: 1.8rem;
+  letter-spacing: 0.1rem;
   text-transform: uppercase;
 }
 
@@ -111,6 +121,6 @@ h6 {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 160px;
-  height: 48px;
+  width: 16rem;
+  height: 4.8rem;
 }
