--- a/src/styles/CategoryProduct.module.css
+++ b/src/styles/CategoryProduct.module.css
@@ -1,6 +1,9 @@
 .description-card {
   padding-top: 3.2rem;
   padding-bottom: 0rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .description-card > * {
