--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -18,9 +18,6 @@
   margin-top: 0rem;
 }
 
-.tabs {
-}
-
 .tabs > * {
   margin-top: 1.6rem;
 }
@@ -36,13 +33,55 @@
 }
 
 .body {
+  composes: text-body from "./index.css";
   color: white;
   opacity: 0.5;
   text-align: center;
+}
+
+.copy-right-social-media {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .social-media {
   display: flex;
   width: 10.4rem;
   justify-content: space-between;
+  margin-top: 4.8rem;
+}
+
+@media (min-width: 30rem) {
+  .root {
+    padding: 6rem 4rem 4.6rem 4rem;
+    align-items: flex-start;
+  }
+
+  .root > * {
+    margin-top: 3.2rem;
+  }
+
+  .tabs {
+    display: flex;
+  }
+
+  .tabs > * {
+    margin-right: 3.4rem;
+    margin-top: 0rem;
+  }
+
+  .body {
+    text-align: left;
+  }
+
+  .copy-right-social-media {
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .social-media {
+    margin-top: 0rem;
+  }
 }
