--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -3,14 +3,20 @@
   justify-content: space-between;
   align-items: center;
   background-color: var(--dark-blue);
-  padding: 0rem 2.4rem;
   border-bottom: 0.1rem solid rgba(172, 167, 167, 0.3);
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   z-index: 1;
-  height: 9rem;
+  padding: 3.2rem 2.4rem;
+  /* height: 9rem; */
+}
+
+@media (min-width: 30rem) {
+  .navbar {
+    padding: 3.2rem 4rem;
+  }
 }
 
 .hamburger {
@@ -20,7 +26,7 @@
 
 .cart {
   width: 2.3rem;
-  height: 1.6rem;
+  height: 1.5rem;
 }
 
 .cart-container {
