--- a/src/styles/HomeProductDisplay.module.css
+++ b/src/styles/HomeProductDisplay.module.css
@@ -7,7 +7,6 @@
 }
 
 .product-display-one {
-  height: 60rem;
   background-color: var(--dark-orange);
   overflow: hidden;
   border-radius: 0.8rem;
@@ -15,6 +14,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 5.5rem 0rem;
 }
 
 .circle-pattern {
@@ -26,7 +26,6 @@
 
 .product-display-one-image {
   width: 17.2rem;
-  margin-top: 5.5rem;
 }
 
 .product-display-one-title {
@@ -42,30 +41,21 @@
   opacity: 0.75;
   text-align: center;
   margin-top: 2.4rem;
+  max-width: 35rem;
 }
 
 .product-display-two {
   border-radius: 0.8rem;
-  height: 3.2rem;
   background-image: url("../assets/home/speaker-zx7-mobile.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   display: flex;
-  align-items: center;
-  height: 32rem;
-}
-
-.product-display-two-text-box {
-  width: 20.4rem;
-  height: 11.8rem;
-  margin-left: 2.4rem;
-  display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  padding: 10rem 2.4rem;
 }
 
 .product-display-two-title {
-  color: black;
+  margin-bottom: 3.2rem;
 }
 
 .product-display-three-img {
@@ -73,6 +63,7 @@
   width: 100%;
   height: 20rem;
   object-fit: cover;
+  margin-bottom: 2.4rem;
 }
 
 .product-display-three-card {
@@ -96,11 +87,32 @@
   color: black;
 }
 
-@media (min-width: 48rem) {
+@media (min-width: 30rem) {
   .circle-pattern {
     width: 130%;
     max-width: 130%;
     position: absolute;
     transform: translateY(-40vw);
+  }
+
+  .product-display-one-title {
+    font-size: 5.6rem !important;
+    line-height: 5.8rem !important;
+    letter-spacing: 0.2rem !important;
+  }
+
+  .product-display-two {
+    background-image: url("../assets/home/speaker-zx7-tablet.jpg");
+    padding: 10rem 6rem;
+  }
+
+  .home-page-product-display > .product-display {
+    margin-bottom: 3.2rem;
+  }
+
+  .product-display-three {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 1rem;
   }
 }
