--- a/src/styles/Portal.module.css
+++ b/src/styles/Portal.module.css
@@ -19,3 +19,10 @@
   justify-content: center;
   align-items: center;
 }
+
+/* 9rem === height of the header */
+.bg--mobileMenu {
+  padding-top: 9rem;
+  padding-left: 0rem;
+  padding-right: 0rem;
+}
