--- a/src/styles/ProductDetail.module.css
+++ b/src/styles/ProductDetail.module.css
@@ -3,6 +3,16 @@
   padding-right: 2.4rem;
 }
 
+.product-view {
+  display: grid;
+  row-gap: 3.2rem;
+}
+
+.product-desc {
+  display: grid;
+  row-gap: 2.4rem;
+}
+
 .main-img {
   width: 100%;
   height: 32.7rem;
@@ -10,25 +20,27 @@
   margin-top: 2.4rem;
 }
 
+.overline {
+  composes: overline from "./index.css";
+  color: var(--dark-orange);
+}
+
 .title {
   color: black;
-  margin-top: 4rem;
 }
 
 .description {
+  composes: text-body from "./index.css";
   color: black;
   opacity: 0.5;
-  margin-top: 2.4rem;
 }
 
 .price {
-  margin-top: 2.4rem;
   color: black;
 }
 
 .btns-container {
   display: flex;
-  margin-top: 3.2rem;
 }
 
 .btns-container > *:first-child {
@@ -140,8 +152,12 @@
   margin-bottom: 4rem;
 }
 
+.others-item-container {
+  display: grid;
+  row-gap: 5.6rem;
+}
+
 .others-item {
-  margin-top: 5.6rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -159,8 +175,62 @@
   margin-top: 0rem;
 }
 
+/* .others-item > *:last-child {
+  margin-top: auto;
+} */
+
 .others-item-img {
   width: 100%;
-  height: 12rem;
   object-fit: cover;
+}
+
+@media (min-width: 30rem) {
+  .root {
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
+
+  .product-view {
+    grid-template-columns: 45fr 55fr;
+    column-gap: 7rem;
+  }
+
+  .content {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .gallery {
+    display: grid;
+    grid-template-columns: 4fr 6fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 2rem;
+  }
+
+  .gallery > * {
+    margin-top: 0rem;
+  }
+
+  .gallery-first {
+    width: 100%;
+    height: 100%;
+    grid-area: 1 /1;
+  }
+
+  .gallery-second {
+    width: 100%;
+    height: 100%;
+    grid-area: 2/1;
+  }
+
+  .gallery-third {
+    width: 100%;
+    height: 100%;
+    grid-area: 1/2/3/3;
+  }
+
+  .others-item-container {
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 1rem;
+  }
 }
