--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -7,16 +7,9 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 100vw;
   z-index: 1;
   padding: 3.2rem 2.4rem;
-  /* height: 9rem; */
-}
-
-@media (min-width: 30rem) {
-  .navbar {
-    padding: 3.2rem 4rem;
-  }
 }
 
 .hamburger {
@@ -47,4 +40,27 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.category-links {
+  display: grid;
+  grid-template-columns: repeat(4, fit-content(25%));
+  column-gap: 3.4rem;
+  color: white;
+  font-weight: 700;
+  font-size: 13px;
+  line-height: 25px;
+  letter-spacing: 2px;
+}
+
+@media (min-width: 30rem) {
+  .navbar {
+    padding: 3.2rem 4rem;
+  }
+}
+
+@media (min-width: 76rem) {
+  .navbar {
+    padding: 3.2rem 16.5rem;
+  }
 }
